@@ -34,7 +34,6 @@ Roadmap PixelController
 	-optimize transfer size to be a multiple of 60 bytes (Arduino and Teensy hardware serial class has a buffer size of 64 bytes)
 	-send reply (ack) only each 2nd frame? each 25th frame? side effects?
 	-maybe a streaming only firmware?
--disable beat detection if sound volume is too low (WIP)
 
 Rejected roadmap features
 -------------------------
