@@ -85,6 +85,11 @@ startup.in.randommode=false
 #=========================
 update.generators.by.sound=true
 
+#=========================
+#if the audio level falls below this threshold, the volume gets muted
+#=========================
+sound.silence.threshold=0.06f
+
 ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
 # OUTPUT SETTINGS #
 # enable only ONE output device (PixelInvaders, RainbowduinoV2, RainbowduinoV3, Art-Net, TPM2, UDP, Adafruit or Minidmx)
