@@ -63,10 +63,12 @@ public final class SoundMinim implements SeSound, Runnable {
 	/** The snd volume max. */
 	private float sndVolumeMax=0;
 
+	private float silenceThreshold;
+	
 	/**
 	 * Instantiates a new sound minim.
 	 */
-	public SoundMinim() {
+	public SoundMinim(float silenceThreshold) {
 		minim = new Minim(Collector.getInstance().getPapplet());
 		//in = minim.getLineIn( Minim.STEREO, 512 );
 		in = minim.getLineIn( Minim.MONO, 1024 );
@@ -96,6 +98,9 @@ public final class SoundMinim implements SeSound, Runnable {
 		} else {
 		    Collector.getInstance().getPapplet().registerDispose(this);
 		}
+		
+		this.silenceThreshold = silenceThreshold;
+		
 		this.runner = new Thread(this);
 		this.runner.setName("ZZ Sound stuff");
 		this.runner.setDaemon(true);
@@ -119,8 +124,7 @@ public final class SoundMinim implements SeSound, Runnable {
 		float max = getSndVolumeMax();		
 
 		//volume is too low, normalization would create wrong results.
-		//XXX Make option configurable
-		if (max<0.06f) {
+		if (max<silenceThreshold) {
 			return 0;
 		}
 		
