@@ -587,4 +587,31 @@ public class PropertiesHelperTest {
         assertEquals(0, ph.getNrOfAdditionalVisuals());
     }
 
+    @Test
+    public void testSoundSilence() {	    
+        Properties config = new Properties();     
+        config.put(ConfigConstant.SOUND_SILENCE_THRESHOLD, "0.06f");
+        ApplicationConfigurationHelper ph = new ApplicationConfigurationHelper(config);
+        assertEquals(0.06f, ph.getSoundSilenceThreshold(), 0.001);
+
+        config = new Properties();     
+        config.put(ConfigConstant.SOUND_SILENCE_THRESHOLD, "  0.06   ");
+        ph = new ApplicationConfigurationHelper(config);
+        assertEquals(0.06f, ph.getSoundSilenceThreshold(), 0.001);
+
+        config = new Properties();     
+        config.put(ConfigConstant.SOUND_SILENCE_THRESHOLD, "");
+        ph = new ApplicationConfigurationHelper(config);
+        assertEquals(0.05f, ph.getSoundSilenceThreshold(), 0.001);
+
+        config = new Properties();     
+        config.put(ConfigConstant.SOUND_SILENCE_THRESHOLD, "0.pillepalle");
+        ph = new ApplicationConfigurationHelper(config);
+        assertEquals(0.05f, ph.getSoundSilenceThreshold(), 0.001);
+
+        config = new Properties();     
+        ph = new ApplicationConfigurationHelper(config);
+        assertEquals(0.05f, ph.getSoundSilenceThreshold(), 0.001);
+
+    }
 }
